<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ImplicitIntentActivity">

    <TextView
        android:id="@+id/tvImplicitIntentExamples"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvImplicitIntentExamples" />

    <Button
        android:id="@+id/btnOpenWebUMN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="openWebUMN"
        android:text="@string/btnOpenWebUMN" />

    <Button
        android:id="@+id/btnCallUMN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="callUMN"
        android:text="@string/btnCallUMN" />

    <TextView
        android:id="@+id/tvSendImplicitIntentWithData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvSendImplicitIntentWithData" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etWebURL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/etWebURLHint"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnBrowse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="browseWebURL"
            android:text="@string/btnBrowse" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etPhoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/etPhoneNumberHint"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnCall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="callPhoneNumber"
            android:text="@string/btnCall" />
    </LinearLayout>
</LinearLayout>